test-cases/negative/test_031_function_call_without_function.lay
# negative test: function call to undefined function
# expected: error should be thrown

call undefined_function


